--- a/views/characters/Nute.html
+++ b/views/characters/Nute.html
@@ -1,54 +1,74 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nute Gunray</title>
-</head>
-<body>
-    <table> 
-        <tr>
-            <th>Apparaît dans : </th> 
-            <td><em>La Menace fantôme</em> , <em>L'Attaque des clones</em> et <em>La Vengeance des Sith</em></td>
-        </tr>
-            <th>Première apparition :</th>
-            <td><em>Un Nouvel espoir</em></td>
-        <tr>
-            <th>Affiliations :</th>
-            <td>Ordre Jedi affilié/République galactique, puis Sith/Empire galactique</td>
-        </tr>
-        <tr>
-            <th>Race :</th>
-            <td>Être humain, puis cyborg</td>
-        </tr>
-        <tr>
-            <th>Genre :</th>
-            <td>Masculin</td>
-        </tr>
-        <tr>
-            <th>Planète d'origine :</th>
-            <td>Tatooine</td>
-        </tr>
-        <tr>
-            <th>Métier :</th>
-            <td>Chevalier de l'Ordre puis Seigneur Sith</td> 
-        </tr>
-        <tr>
-            <th>Côté de la force :</th>
-            <td>Côté lumineux, puis obscur</td>
-        </tr>
-    </table>
-        
-    <h2>Histoire :</h2>
-    <p>Nute Gunray est un personnage de Star Wars créé pour la deuxième trilogie de la saga. Originaire de Cato Neimodia, ce neimodien est vice-roi de la Fédération du Commerce dans les films dans lesquels il apparaît.</p>
-    <p> Dans La Menace fantôme, il s'agit de l'antagoniste le plus présent. Il lance le blocus de Naboo, guidé dans l'ombre par le Sith Dark Sidious et temporairement secondé de l'apprenti du Sith, Dark Maul. Il rejoint ensuite le Conseil séparatiste du comte Dooku, le second apprenti de Dark Sidious, et assiste au commencement de la guerre des clones à Géonosis dans L'Attaque des clones. Il est enfin tué dans La Revanche des Sith à la fin de cette guerre à Mustafar, lorsque le nouvel apprenti de Dark Sidious, Dark Vador, est envoyé par son maître massacrer les dirigeants séparatistes.</p>
-    <p>Rôle dans le blocus de Naboo :
-    Vice-roi de la Fédération du Commerce, Nute Gunray est contacté par le mystérieux Sith Dark Sidious (qui n'est autre que le sénateur Palpatine de Naboo) en 32 av. BY. Le Sith manipule alors Gunray pour l'amener à superviser le blocus de Naboo illégalement. Le neimodien envoie ensuite son armée envahir Naboo. Nute Gunray décide d'orchestrer le blocus de Naboo lorsqu'il apprend que le Sénat décide de taxer les zones éloignées où la Fédération du Commerce s'enrichit. Lorsque des Jedi sont envoyés par la République en ambassadeurs, Dark Sidious convainc Gunray de tenter de les tuer, mais il échoue.</p>
-    <p>Rôle dans la guerre des clones :
-    Gunray se rapproche de la CSI et devient membre du Conseil séparatiste. Il fournit l'organisation en droïdes de combat et donne un grand avantage à son camp au début de la guerre des clones. <br>
-    Alors que le Conseil séparatiste est réuni à Mustafar, le nouveau Sith Dark Vador arrive. Il tue alors tous les membres. Nute Gunray est la dernière victime du massacre. Alors qu'il s'attend depuis le début de son partenariat avec Dark Sidious à un titre respectable dans l'Empire galactique que ce dernier s'apprête à fonder, Dark Sidious le trahit ainsi en le faisant tuer.</p>
-
-       
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Nute Gunray</title>
+	</head>
+	<body>
+		<header>
+			<iframe src="../ressources/header.html" frameborder="0"></iframe>
+		</header>
+		<main>
+			<div class="container">
+				<div class="presentation">
+					<div class="histoire">
+                        <h1>Nute Gunray</h1>
+                        <p>Nute Gunray est un personnage de Star Wars créé pour la deuxième trilogie de la saga. Originaire de Cato Neimodia, ce neimodien est vice-roi de la Fédération du Commerce dans les films dans lesquels il apparaît.</p>
+                    </div>
+                    <div class="presentoir">
+                        <img src="" alt="">
+                        <table>
+							<tr>
+                                <th>Apparaît dans : </th> 
+                                <td><em>La Menace fantôme</em> , <em>L'Attaque des clones</em> et <em>La Vengeance des Sith</em></td>
+                            </tr>
+                            <tr>
+                                <th>Première apparition :</th>
+                                <td><em>La Menace fantôme</em></td>
+                            </tr>
+                            <tr>
+                                <th>Affiliations :</th>
+                                <td>Fédération du commerce CSI</td>
+                            </tr>
+                            <tr>
+                                <th>Race :</th>
+                                <td>Neimoidien</td>
+                            </tr>
+                            <tr>
+                                <th>Genre :</th>
+                                <td>Masculin</td>
+                            </tr>
+                            <tr>
+                                <th>Planète d'origine :</th>
+                                <td>Cato Neimodia</td>
+                            </tr>
+                            <tr>
+                                <th>Métier :</th>
+                                <td>Vice-roi de la Fédération du commerce</td> 
+                            </tr>
+                            <tr>
+                                <th>Côté de la force :</th>
+                                <td>Côté obscur</td>
+                            </tr>
+						</table>
+                    </div>
+				</div>
+                <div class="relations">
+                    <h2>Rôle dans l'histoire</h2>
+                    <img src="" alt="">
+					<p>Dans La Menace fantôme, il s'agit de l'antagoniste le plus présent. Il lance le blocus de Naboo, guidé dans l'ombre par le Sith Dark Sidious et temporairement secondé de l'apprenti du Sith, Dark Maul. Il rejoint ensuite le Conseil séparatiste du comte Dooku, le second apprenti de Dark Sidious, et assiste au commencement de la guerre des clones à Géonosis dans L'Attaque des clones. Il est enfin tué dans La Revanche des Sith à la fin de cette guerre à Mustafar, lorsque le nouvel apprenti de Dark Sidious, Dark Vador, est envoyé par son maître massacrer les dirigeants séparatistes.</p>  
+					<p>Rôle dans le blocus de Naboo : <br>
+                        Vice-roi de la Fédération du Commerce, Nute Gunray est contacté par le mystérieux Sith Dark Sidious (qui n'est autre que le sénateur Palpatine de Naboo) en 32 av. BY. Le Sith manipule alors Gunray pour l'amener à superviser le blocus de Naboo illégalement. Le neimodien envoie ensuite son armée envahir Naboo. Nute Gunray décide d'orchestrer le blocus de Naboo lorsqu'il apprend que le Sénat décide de taxer les zones éloignées où la Fédération du Commerce s'enrichit. Lorsque des Jedi sont envoyés par la République en ambassadeurs, Dark Sidious convainc Gunray de tenter de les tuer, mais il échoue.</p>   
+					<p>Rôle dans la guerre des clones : <br>
+                        Gunray se rapproche de la CSI et devient membre du Conseil séparatiste. Il fournit l'organisation en droïdes de combat et donne un grand avantage à son camp au début de la guerre des clones. <br>
+                        Alors que le Conseil séparatiste est réuni à Mustafar, le nouveau Sith Dark Vador arrive. Il tue alors tous les membres. Nute Gunray est la dernière victime du massacre. Alors qu'il s'attend depuis le début de son partenariat avec Dark Sidious à un titre respectable dans l'Empire galactique que ce dernier s'apprête à fonder, Dark Sidious le trahit ainsi en le faisant tuer.</p> 
+                </div>
+			</div>
+		</main>
+		<footer>
+			<iframe src="../ressources/footer.html" frameborder="0"></iframe>
+		</footer>
+	</body>
 </html>
