--- a/views/characters/Valorum.html
+++ b/views/characters/Valorum.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finis Valorum</title>
-</head>
-<body>
-    <table> 
-        <tr>
-            <th>Apparaît dans : </th> 
-            <td><em>La Menace fantôme</em></td>
-        </tr>
-        <tr> 
-            <th>Première apparition :</th>
-            <td><em>La Menace fantôme</em></td>
-        </tr>
-        <tr>
-            <th>Affiliations :</th>
-            <td>Maison Valorum, République galactique et Sénat galactique</td>
-        </tr>
-        <tr>
-            <th>Race :</th>
-            <td>Être humain</td>
-        </tr>
-        <tr>
-            <th>Genre :</th>
-            <td>Masculin</td>
-        </tr>
-        <tr>
-            <th>Planète d'origine :</th>
-            <td>Coruscant</td>
-        </tr>
-        <tr>
-            <th>Métier :</th>
-            <td>Chancelier Suprême de la République galactique</td> 
-        </tr>
-        <tr>
-            <th>Côté de la force :</th>
-            <td>neutre</td>
-        </tr>
-    </table>
-        
-    <h2>Histoire :</h2>
-    <p>Membre de la Maison Valorum et né sur la planète Coruscant, Finis Valorum était un descendant du tout premier Chancelier de la République Galactique. Ce politicien très apprécié fut élu deux fois Chancelier Suprême.
-
-    <p>Durant son deuxième mandat, il fit passer la proposition 31-814D, une loi taxant les routes commerciales. Cela attisa la colère de la Fédération du commerce qui mit en place le blocus de Naboo pour s'opposer.</p>    
-        
-    <p>Sachant que la majeure partie des sénateurs étaient acquis à la solde de l'organisation, il envoya en secret deux Jedi, Qui-Gon Jinn et Obi-Wan Kenobi pour négocier avec Nute Gunray, le leader de la Fédération du commerce. Cependant, Valorum ignorait que le Neimoidien répondait aux ordres de Dark Sidious. Celui-ci ordonna la mort des Jedi. Cependant, ils parvinrent à survivre et à quitter la planète avec la Reine Padmé Amidala.</p>    
-        
-    <p>Celle-ci se rendit au Sénat Galactique pour protester ouvertement face à la Fédération du commerce, sur la demande de Valorum et de Sheev Palpatine, le sénateur de Naboo. Malheureusement, Valorum se trouva impuissant lorsque Lott Dod, sénateur de la Fédération du commerce, riposta en demandant l'envoi d'une commission d'enquête, afin de paralyser ses opposants, et qu'il reçut le soutien d'influents sénateurs comme Aks Moe de Malastare. Padmé Amidala refusa et demanda un vote de défiance à l'encontre de Valorum. Celui-ci perdit alors son poste au profit de Palpatine.</p>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Finis Valorum</title>
+	</head>
+	<body>
+		<header>
+			<iframe src="../ressources/header.html" frameborder="0"></iframe>
+		</header>
+		<main>
+			<div class="container">
+				<div class="presentation">
+					<div class="histoire">
+                        <h1>Finis Valorum</h1>
+                        <p>Membre de la Maison Valorum et né sur la planète Coruscant, Finis Valorum était un descendant du tout premier Chancelier de la République Galactique. Ce politicien très apprécié fut élu deux fois Chancelier Suprême.</p>
+                    </div>
+                    <div class="presentoir">
+                        <img src="" alt="">
+                        <table>
+							<tr>
+								<th>Apparaît dans : </th> 
+								<td><em>La Menace fantôme</em></td>
+							</tr>
+							<tr> 
+								<th>Première apparition :</th>
+								<td><em>La Menace fantôme</em></td>
+							</tr>
+							<tr>
+								<th>Affiliations :</th>
+								<td>Maison Valorum, République galactique et Sénat galactique</td>
+							</tr>
+							<tr>
+								<th>Race :</th>
+								<td>Être humain</td>
+							</tr>
+							<tr>
+								<th>Genre :</th>
+								<td>Masculin</td>
+							</tr>
+							<tr>
+								<th>Planète d'origine :</th>
+								<td>Coruscant</td>
+							</tr>
+							<tr>
+								<th>Métier :</th>
+								<td>Chancelier Suprême de la République galactique</td> 
+							</tr>
+							<tr>
+								<th>Côté de la force :</th>
+								<td>Côté lumineux</td>
+							</tr>
+						</table>
+                    </div>
+				</div>
+                <div class="relations">
+                    <h2>Rôle dans l'histoire</h2>
+                    <img src="" alt="">
+					<p>Durant son deuxième mandat, Valorum fit passer la proposition 31-814D, une loi taxant les routes commerciales. Cela attisa la colère de la Fédération du commerce qui mit en place le blocus de Naboo pour s'opposer.</p>  
+					<p>Sachant que la majeure partie des sénateurs étaient acquis à la solde de l'organisation, il envoya en secret deux Jedi, Qui-Gon Jinn et Obi-Wan Kenobi pour négocier avec Nute Gunray, le leader de la Fédération du commerce. Cependant, Valorum ignorait que le Neimoidien répondait aux ordres de Dark Sidious. Celui-ci ordonna la mort des Jedi. Cependant, ils parvinrent à survivre et à quitter la planète avec la Reine Padmé Amidala.</p>   
+					<p>Celle-ci se rendit au Sénat Galactique pour protester ouvertement face à la Fédération du commerce, sur la demande de Valorum et de Sheev Palpatine, le sénateur de Naboo. Malheureusement, Valorum se trouva impuissant lorsque Lott Dod, sénateur de la Fédération du commerce, riposta en demandant l'envoi d'une commission d'enquête, afin de paralyser ses opposants, et qu'il reçut le soutien d'influents sénateurs comme Aks Moe de Malastare. Padmé Amidala refusa et demanda un vote de défiance à l'encontre de Valorum. Celui-ci perdit alors son poste au profit de Palpatine.</p> 
+                </div>
+			</div>
+		</main>
+		<footer>
+			<iframe src="../ressources/footer.html" frameborder="0"></iframe>
+		</footer>
+	</body>
 </html>
