--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
 iframe{
     width: 100%;
 }
+.film {
+    max-width: 100%;
+    max-height: 100%;
+}
+.accueil {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+    margin: 5% 0% 5% 5%;
+}
+.left, .center, .right {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+}
