--- a/views/characters/Anakin.html
+++ b/views/characters/Anakin.html
@@ -4,11 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../../css/styles.css">
 		<title>Anakin Skywalker</title>
 	</head>
 	<body>
 		<header>
-			<iframe src="../ressources/header.html" frameborder="0"></iframe>
+			<iframe src="../header.html" frameborder="0"></iframe>
 		</header>
 		<main>
 			<div class="container">
@@ -54,6 +55,7 @@
                     </div>
 				</div>
                 <div class="relations">
+                    <hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
 					<p>La prélogie, composée de <em>La Menace fantôme</em> (1999), <em>L'Attaque des clones</em> (2002) et <em>La Revanche des Sith</em> (2005), explore l'enfance et la jeunesse d'Anakin Skywalker, détaillant les raisons et les circonstances de sa transformation en personnage malfaisant.</p> 
@@ -65,7 +67,7 @@
 			</div>
 		</main>
 		<footer>
-			<iframe src="../ressources/footer.html" frameborder="0"></iframe>
+			<iframe src="../footer.html" frameborder="0"></iframe>
 		</footer>
 	</body>
 </html>
