--- a/views/characters/Nass.html
+++ b/views/characters/Nass.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../../css/styles.css">
 		<title>Boss Nass</title>
 	</head>
 	<body>
@@ -56,6 +57,7 @@
                     </div>
 				</div>
                 <div class="relations">
+                    <hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
 					<p>Contrairement à d’autres Boss Gungans, Nass pouvait se montrer très indulgent. Il pardonna plusieurs écarts de conduite au maladroit Jar Jar Binks avant qu’un énième incident ne mette un terme à sa patience pour le malheureux Gungan et qu’il le condamne à quitter la cité.</p> 
