--- a/views/characters/Nute.html
+++ b/views/characters/Nute.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../../css/styles.css">
 		<title>Nute Gunray</title>
 	</head>
 	<body>
@@ -56,6 +57,7 @@
                     </div>
 				</div>
                 <div class="relations">
+                    <hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
 					<p>Dans La Menace fantôme, il s'agit de l'antagoniste le plus présent. Il lance le blocus de Naboo, guidé dans l'ombre par le Sith Dark Sidious et temporairement secondé de l'apprenti du Sith, Dark Maul. Il rejoint ensuite le Conseil séparatiste du comte Dooku, le second apprenti de Dark Sidious, et assiste au commencement de la guerre des clones à Géonosis dans L'Attaque des clones. Il est enfin tué dans La Revanche des Sith à la fin de cette guerre à Mustafar, lorsque le nouvel apprenti de Dark Sidious, Dark Vador, est envoyé par son maître massacrer les dirigeants séparatistes.</p>  
