--- a/views/characters/Valorum.html
+++ b/views/characters/Valorum.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../../css/styles.css">
 		<title>Finis Valorum</title>
 	</head>
 	<body>
@@ -56,6 +57,7 @@
                     </div>
 				</div>
                 <div class="relations">
+					<hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
 					<p>Durant son deuxième mandat, Valorum fit passer la proposition 31-814D, une loi taxant les routes commerciales. Cela attisa la colère de la Fédération du commerce qui mit en place le blocus de Naboo pour s'opposer.</p>  
