--- a/views/viewer/obi_wan.html
+++ b/views/viewer/obi_wan.html
@@ -14,25 +14,30 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-                        <h1>Anakin Skywalker</h1>
-                        <p>Anakin Skywalker, ou Dark Vador, Darth Vader dans la version originale en anglais et la traduction québécoise, est un personnage de fiction, l'élu de la prophétie, successivement chevalier Jedi puis seigneur Sith, et le personnage central des deux premières trilogies de la saga cinématographique Star Wars conçue par George Lucas.</p> 
+                        <h1>Obi wan</h1>
+                        <p> </p> 
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
                             <tr>
-                                <th>Apparaît dans : </th> 
-                                <td><em>La Menace fantôme</em> , <em>L'Attaque des clones</em> et <em>La Vengeance des Sith</em></td>
+                                <th>Apparaît dans : </th>
+                                <td><em>La Menace fantôme</em></td>
+                                <td><em> La guerre des clones</em></td>
+                                <td><em>l'héritage</em> </td>
                             </tr>
-                                <th>Première apparition :</th>
-                                <td><em>Un Nouvel espoir</em></td>
+                            <th>Première apparition :</th>
+                            <td><em>La menace fantome</em></td>
                             <tr>
                                 <th>Affiliations :</th>
-                                <td>Ordre Jedi affilié/République galactique, puis Sith/Empire galactique</td>
+                                <td>
+                                    ordre jedi
+                                </td>
+                    
                             </tr>
                             <tr>
                                 <th>Race :</th>
-                                <td>Être humain, puis cyborg</td>
+                                <td>Humain</td>
                             </tr>
                             <tr>
                                 <th>Genre :</th>
@@ -40,17 +45,18 @@
                             </tr>
                             <tr>
                                 <th>Planète d'origine :</th>
-                                <td>Tatooine</td>
+                                <td>Stewjon</td>
                             </tr>
                             <tr>
                                 <th>Métier :</th>
-                                <td>Chevalier de l'Ordre puis Seigneur Sith</td> 
+                                <td>Ordre jedi</td>
+                    
                             </tr>
                             <tr>
                                 <th>Côté de la force :</th>
-                                <td>Côté lumineux, puis obscur</td>
+                                <td>Côté lumineux</td>
                             </tr>
-						</table>
+                        </table>
                     </div>
 				</div>
                 <div class="relations">
