--- a/views/caracters/nute.html
+++ b/views/caracters/nute.html
@@ -23,11 +23,11 @@
                         <table>
 							<tr>
                                 <th>Apparaît dans : </th> 
-                                <td><em>La Menace fantôme</em> , <em>L'Attaque des clones</em> et <em>La Vengeance des Sith</em></td>
+                                <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a></td>
                             </tr>
                             <tr>
                                 <th>Première apparition :</th>
-                                <td><em>La Menace fantôme</em></td>
+                                <td><a>La Menace fantôme</a></td>
                             </tr>
                             <tr>
                                 <th>Affiliations :</th>
