--- a/views/caracters/palpatine.html
+++ b/views/caracters/palpatine.html
@@ -23,10 +23,10 @@
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th>
-                                <td><em>La Menace fantôme</em> , <em>L'Attaque des clones</em> et <em>La Vengeance des Sith</em></td>
+                                <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a></td>
                             </tr>
                             <th>Première apparition :</th>
-                            <td><em>L'Empire contre-attaque </em></td>
+                            <td><a>L'Empire contre-attaque </a></td>
                             <tr>
                                 <th>Affiliations :</th>
                                 <td>Sith République galactique</td>
@@ -70,8 +70,8 @@
                         principal de la saga Star Wars créée par George Lucas. D'abord sénateur de Naboo, Palpatine réussit à se faire élire
                         Chancelier suprême de la galaxie, avant de fomenter un coup d'état qui le voit devenir empereur de l'Empire
                         galactique pendant vingt-cinq ans.</p>  
-					<p>La prélogie, composée de <em>La Menace fantôme</em> (1999), <em>L'Attaque des clones</em> (2002) et <em>La
-                        Revanche des Sith</em> (2005)Sheev Palpatine, né sur Naboo vers 84 avant la bataille de Yavin1, s'engage
+					<p>La prélogie, composée de <a>La Menace fantôme</a> (1999), <a>L'Attaque des clones</a> (2002) et <a>La
+                        Revanche des Sith</a> (2005)Sheev Palpatine, né sur Naboo vers 84 avant la bataille de Yavin1, s'engage
                     dans une carrière politique et en gravit les échelons jusqu'à devenir le représentant de sa planète natale au
                     Sénat galactique de la République.
                     Palpatine a obtenu le nom de Dark Sidious lorsqu'il est devenu l'apprenti du seigneur Sith légendaire Dark
