--- a/views/caracters/qui_jon_ji.html
+++ b/views/caracters/qui_jon_ji.html
@@ -23,12 +23,12 @@
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th>
-                                <td><em>La Menace fantôme</em></td>
-                                <td><em> La guerre des clones</em></td>
+                                <td><a>La Menace fantôme</a></td>
+                                <td><a> La guerre des clones</a></td>
                                 <td>l'héritage</td>
                             </tr>
                             <th>Première apparition :</th>
-                            <td><em>La menace fantome</em></td>
+                            <td><a>La menace fantome</a></td>
                             <tr>
                                 <th>Affiliations :</th>
                                 <td>Jedi</td>
