--- a/views/caracters/valorum.html
+++ b/views/caracters/valorum.html
@@ -23,11 +23,11 @@
                         <table>
 							<tr>
 								<th>Apparaît dans : </th> 
-								<td><em>La Menace fantôme</em></td>
+								<td><a>La Menace fantôme</a></td>
 							</tr>
 							<tr> 
 								<th>Première apparition :</th>
-								<td><em>La Menace fantôme</em></td>
+								<td><a>La Menace fantôme</a></td>
 							</tr>
 							<tr>
 								<th>Affiliations :</th>
