--- a/views/characters/Anakin.html
+++ b/views/characters/Anakin.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Anakin Skywalker</title>
+        <link rel='stylesheet' type='text/css' media='screen' href='../../css/styles.css'>
 	</head>
 	<body>
 		<header>
-			<iframe src="../ressources/header.html" frameborder="0"></iframe>
+			<iframe src="../header.html" frameborder="0"></iframe>
 		</header>
 		<main>
 			<div class="container">
@@ -24,8 +25,10 @@
                                 <th>Apparaît dans : </th> 
                                 <td><em>La Menace fantôme</em> , <em>L'Attaque des clones</em> et <em>La Vengeance des Sith</em></td>
                             </tr>
+                            <tr>
                                 <th>Première apparition :</th>
                                 <td><em>Un Nouvel espoir</em></td>
+                            </tr>
                             <tr>
                                 <th>Affiliations :</th>
                                 <td>Ordre Jedi affilié/République galactique, puis Sith/Empire galactique</td>
@@ -65,7 +68,7 @@
 			</div>
 		</main>
 		<footer>
-			<iframe src="../ressources/footer.html" frameborder="0"></iframe>
+			<iframe src="../footer.html" frameborder="0"></iframe>
 		</footer>
 	</body>
 </html>
