--- a/views/characters/r2d2.html
+++ b/views/characters/r2d2.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css">
-		<title></title>
+		<title>R2-D2</title>
 	</head>
 	<body>
 		<header>
@@ -15,39 +15,39 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-                        <h1></h1>
-                        <p></p>
+                        <h1>R2-D2</h1>
+                        <p>R2-D2 était un droïde astromécano de série R2. Il participa à plusieurs conflits majeurs de la galaxie, notamment la Guerre des Clones du côté de la République Galactique, puis la Guerre Civile Galactique du côté de l'Alliance Rebelle.</p>
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
 							<tr>
 								<th>Apparait dans:</th>
-								<td></td>
+								<td>La Menace Fantôme</td>
 							</tr>
 							<tr>
 								<th>Première apparition:</th>
-								<td></td>
+								<td>La Menace Fantôme</td>
 							</tr>
 							<tr>
 								<th>Affiliation:</th>
-								<td></td>
+								<td>Maison Royale de Naboo</td>
 							</tr>
 							<tr>
 								<th>Race:</th>
-								<td></td>
+								<td>Droïde</td>
 							</tr>
 							<tr>
 								<th>Genre:</th>
-								<td></td>
+								<td>Programmation Masculine</td>
 							</tr>
 							<tr>
 								<th>Planète d'origine:</th>
-								<td></td>
+								<td>Nubia</td>
 							</tr>
 							<tr>
 								<th>Métier:</th>
-								<td></td>
+								<td>Astromécano</td>
 							</tr>
 							<tr>
 								<th>Côté de la Force:</th>
