--- a/views/characters/jar_jar_bink.html
+++ b/views/characters/jar_jar_bink.html
@@ -22,12 +22,12 @@
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th>
-                                <td><em>La Menace fantôme</em></td>
-                                <td><em> La guerre des clones</em></td>
-                                <td><em>l'héritage</em> </td>
+                                <td><a>La Menace fantôme</a></td>
+                                <td><a> La guerre des clones</a></td>
+                                <td><a>l'héritage</a> </td>
                             </tr>
                             <th>Première apparition :</th>
-                            <td><em>La menace fantome</em></td>
+                            <td><a>La menace fantome</a></td>
                             <tr>
                                 <th>Affiliations :</th>
                                 <td>	Grande Armée Gungan,
