--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -15,7 +15,7 @@
 				<div class="presentation">
 					<div class="histoire">
                         <h1>Obi wan</h1>
-                        <p> </p> 
+                        <p> Yoda est un personnage fictif de l'univers Star Wars. Il apparaît pour la première fois dans L'Empire contre-attaque en 1980. Il est le maître Jedi qui enseigne à Luke comment utiliser la Force.</p> 
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
