--- a/views/viewer/Amidala.html
+++ b/views/viewer/Amidala.html
@@ -16,18 +16,18 @@
 				<div class="presentation">
 					<div class="histoire">
                         <h1>Padmé Amidala</h1>
-                        <p>Padmé Amidala est un personnage de fiction, femme politique dans la prélogie (épisodes I, II et III) de Star Wars. Elle est interprétée par Natalie Portman.</p> 
+                        <p>Padmé Amidala est un personnage de fiction, fame politique dans la prélogie (épisodes I, II et III) de Star Wars. Elle est interprétée par Natalie Portman.</p> 
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th> 
-                                <td><em>La Menace fantôme</em> , <em>L'Attaque des clones</em> et <em>La Vengeance des Sith</em></td>
+                                <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a></td>
                             </tr>
                             <tr>
-                                <th>Première apparition :</th>
-                                <td><em>La Menace fantôme</em></td>
+                                <th>Praière apparition :</th>
+                                <td><a>La Menace fantôme</a></td>
                             </tr>
                             <tr>
                                 <th>Affiliations :</th>
@@ -60,9 +60,9 @@
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
-					<p>Dans <em>La Menace fantôme</em> à l'âge de quatorze ans, Padmé devient démocratiquement la souveraine du peuple de la planète Naboo et gouverne sous le nom de Padmé Amidala.Les Neimodiens, à la tête de la fédération du Commerce espéraient que la jeunesse et l'inexpérience de la jeune reine feraient d'elle une proie facile. Elle résiste pourtant et refuse de signer le traité imposé par Gunray, celui-ci tente donc de l'assassiner. Elle s'échappe de justesse avec les Jedis Qui-Gon Jinn et Obi-Wan Kenobi, et tente de rejoindre Coruscant pour plaider la cause de son peuple au Sénat. Lors d'une halte imprévue sur Tatooine, sous les traits d'une suivante, elle fait la connaissance du jeune Anakin Skywalker et de sa mère Shmi. </p> 
-                    <p>Une dizaine d'années plus tard dans <em>L'Attaque des clones</em>, Padmé est devenue sénatrice de Naboo après expiration de son mandat de reine, poste pour lequel elle a été réélue deux fois, et mène une faction qui se prononce contre l'établissement d'une armée de la République en réponse à la menace du mouvement Séparatiste. Elle est victime d'un attentat sur Coruscant qui tue sa doublure : Cordé. </p>
-                    <p>Dans <em>La Revanche des Sith</em>, trois ans ont passé et la Guerre des Clones fait rage dans la galaxie. Désormais enceinte, Padmé est réduite à un rôle plus effacé d'autant plus que son amour pour Anakin est demeuré secret. Ce dernier est victime de prémonitions lui annonçant la mort de Padmé. C'est pour lui épargner ce funeste sort qu'il se laisse séduire par les promesses du chancelier Palpatine, en fait le mystérieux Dark Sidious, le seigneur noir des Sith.</p>
+					<p>Dans <a>La Menace fantôme</a> à l'âge de quatorze ans, Padmé devient démocratiquaent la souveraine du peuple de la planète Naboo et gouverne sous le nom de Padmé Amidala.Les Neimodiens, à la tête de la fédération du Commerce espéraient que la jeunesse et l'inexpérience de la jeune reine feraient d'elle une proie facile. Elle résiste pourtant et refuse de signer le traité imposé par Gunray, celui-ci tente donc de l'assassiner. Elle s'échappe de justesse avec les Jedis Qui-Gon Jinn et Obi-Wan Kenobi, et tente de rejoindre Coruscant pour plaider la cause de son peuple au Sénat. Lors d'une halte imprévue sur Tatooine, sous les traits d'une suivante, elle fait la connaissance du jeune Anakin Skywalker et de sa mère Shmi. </p> 
+                    <p>Une dizaine d'années plus tard dans <a>L'Attaque des clones</a>, Padmé est devenue sénatrice de Naboo après expiration de son mandat de reine, poste pour lequel elle a été réélue deux fois, et mène une faction qui se prononce contre l'établissaent d'une armée de la République en réponse à la menace du mouvaent Séparatiste. Elle est victime d'un attentat sur Coruscant qui tue sa doublure : Cordé. </p>
+                    <p>Dans <a>La Revanche des Sith</a>, trois ans ont passé et la Guerre des Clones fait rage dans la galaxie. Désormais enceinte, Padmé est réduite à un rôle plus effacé d'autant plus que son amour pour Anakin est daeuré secret. Ce dernier est victime de prémonitions lui annonçant la mort de Padmé. C'est pour lui épargner ce funeste sort qu'il se laisse séduire par les promesses du chancelier Palpatine, en fait le mystérieux Dark Sidious, le seigneur noir des Sith.</p>
                 </div>
 			</div>
 		</main>
