--- a/views/viewer/mace_windu.html
+++ b/views/viewer/mace_windu.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../../css/styles.css">
-		<title>Ki-Adi Mundi</title>
+		<title>Mace Windu</title>
 	</head>
 	<body>
 		<header>
@@ -15,8 +15,8 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-                        <h1>Ki-Adi-Mundi</h1>
-                        <p>Ki-Adi-Mundi est un personnage de fiction de la saga de Star Wars qui apparaît dans tous les épisodes de la prélogie. Ki-Adi-Mundi est interprété par Silas Carson, comme le vice-roi Nute Gunray de la même trilogie.</p> 
+                        <h1>Mace Windu</h1>
+                        <p>Mace Windu est un maître Jedi, personnage de la saga cinématographique Star Wars. Il est interprété au cinéma par Samuel L. Jackson dans <a>La Menace fantôme </a>, <a>L'Attaque des clones</a> et <a>La Revanche des Sith</a>.</p> 
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
@@ -33,7 +33,7 @@
                             </tr>
                             <tr>
                                 <th>Race :</th>
-                                <td>Céréen</td>
+                                <td>Être humain</td>
                             </tr>
                             <tr>
                                 <th>Genre :</th>
@@ -41,7 +41,7 @@
                             </tr>
                             <tr>
                                 <th>Planète d'origine :</th>
-                                <td>Céréa</td>
+                                <td>Haruun Kal</td>
                             </tr>
                             <tr>
                                 <th>Métier :</th>
@@ -58,9 +58,9 @@
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
-					<p>Ki-Adi-Mundi est le padawan du Maître Jedi Yoda. Sa sagesse était légendaire. Seul chevalier nommé au Conseil Jedi, il devient maitre Jedi quelques années plus tard. Il devient ensuite lui-même, à l'instar d'un autre apprenti de Yoda nommé Mace Windu, mabre du conseil Jedi. Le praier sabre laser de Ki-Adi-Mundi affiche une lame de couleur violette.</p> 
-                    <p>Ki-Adi-Mundi assiste au début de la guerre des clones. En effet, il fait partie des Jedi qui viennent porter secours à leurs collègues dans l'arène des exécutions, lors de la praière bataille de Géonosis. Il en survit et devient général de l'armée clone. Il commande dès lors les Marines galactiques.</p> 
-                    <p>Le Jedi participe à la seconde bataille de Géonosis. Durant celle-ci, il surpasse Anakin Skywalker et son apprentie Ahsoka Tano en nombre de droïdes de combat séparatistes vaincus, sans être dans un praier taps au courant de la compétition entre les deux autres Jedi.</p>
+					<p>Dans les événements qui ont abouti à la bataille de Géonosis (<a>Attaque des clones</a> ), Mace Windu accompagna 200 Jedi chargés de secourir Obi-Wan Kenobi, sur le point d'être exécuté en compagnie d'Anakin Skywalker et de la Sénatrice Padmé Amidala sur ordre du Comte Dooku. </p> 
+                    <p>Pendant la guerre des clones, Maître Windu fut l'un des grands généraux de l'armée de la République, en possédant une légion de 5 000 hommes et un commandant clone, du nom de commandant Ponds. Lors de la bataille de Ryloth, il arrêta Wat Tambor, qui retenait prisonniers les Twi'leks.</p> 
+                    <p>Lors de la bataille de Coruscant, après le sauvetage du Chancelier Palpatine sur le vaisseau amiral du général Grievous (la Main Invisible), il apprend grâce à Anakin Skywalker que le Seigneur Noir des Sith, Dark Sidious, n'est autre que le Chancelier en personne. Pressé d'arrêter le Sith, le Maître Jedi se rend immédiatement à son bureau accompagné de trois Jedi seulement, Kit Fisto, Agen Kolar et Saesee Tiin.</p>
                     
 			</div>
 		</main>
