--- a/views/characters/bail_organa.html
+++ b/views/characters/bail_organa.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title></title>
+		<title>Bail Organa</title>
 	</head>
 	<body>
 		<header>
@@ -31,7 +31,7 @@
 								<td><a>L'Attaque des clones</a>, <a>La Revanche des Sith</a> <a>Rogue One</a></td>
 							</tr>
 							<tr>
-								<th>Praière apparition :</th>
+								<th>Première apparition :</th>
 								<td><a>L'Attaque des clones (2002)</a></td>
 							</tr>
 							<tr>
@@ -48,15 +48,15 @@
 							</tr>
 							<tr>
 								<th>Planète d'origine :</th>
-								<td>Tatooine</td>
+								<td>Alderaan</td>
 							</tr>
 							<tr>
 								<th>Métier :</th>
-								<td>Chevalier de l'Ordre puis Seigneur Sith</td>
+								<td>Sénateur d'Alderaan Fondateur et leadeur de l'Alliance Rebelle</td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td>Côté lumineux, puis obscur</td>
+								<td>Côté clignotant</td>
 							</tr>
 						</table>
 					</div>
@@ -65,9 +65,9 @@
 					<hr />
 					<h2>Rôle dans l'histoire</h2>
 					<img src="" alt="" />
-					<p></p>
-					<p></p>
-					<p></p>
+					<p>Bail Organa naquit sur Alderaan. Après un conflit qui fut réglé à l'aide du Maître Jedi Jorus C'baoth, il fut proclamé Vice-Roi de la planète. Il prit également les fonctions de sénateur en remplaçant Bail Antilles à ce poste1.</p>
+					<p>Ardent défenseur de la démocratie et de la République, il fit partie du Comité Loyaliste lors de la Crise Séparatiste et soutint le Chancelier Suprême Palpatine. Il soutint également la motion du sénateur Binks afin d'attribuer les pleins pouvoirs au Chancelier à la veille de la guerre des clones. Néanmoins, il se rendit compte durant le conflit et grâce à l'aide de l'ex-chancelier Finis Valorum, que Palpatine était beaucoup moins bienveillant qu'il voulait bien le montrer et que ses méthodes laissaient pour le moins à désirer. Sa conviction fut renforcée lorsque Palpatine le "menaça gentiment" (selon Organa lui-même) et encore plus lorsque Valorum mourut lors de l'explosion d'un cargo permettant au Chancelier à la fois d'éliminer cette menace et de faire passer une loi pour renforcer la sécurité.</p>
+					<p>Lors du conflit, Organa se rapprocha des Jedi et de certains sénateurs comme Fang Zar, Padmé Amidala et surtout Mon Mothma2,3, la sénatrice de Chandrila, future dirigeante de la rébellion. Bail Organa accueillit Anakin Skywalker et Obi-Wan Kenobi, les deux héros Jedi, après la bataille de Coruscant. Il se trouvait toujours sur Coruscant lorsque l'Ordre 66 fut donné et il se rendit au temple Jedi alors que les clones de la 501e légion le prenaient d'assaut sous le commandement de Dark Vador et de Appo. Il assista en direct au meurtre de Zett Jukassa et parvint à s'enfuir in extremis. Seul son statut de sénateur lui sauva la vie à ce moment. Il décida alors de partir à la recherche d'éventuels survivants Jedi pour leur porter secours et parvint à réunir Obi-Wan Kenobi et Yoda à bord du Tantive IV. Il fut alors convoqué au Sénat pour une session extraordinaire où Palpatine annonça la fin de la République et le début de l'Empire ainsi que l'extermination des « traîtres » Jedi.</p>
 				</div>
 			</div>
 		</main>
