--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -14,64 +14,66 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-                        <h1>Obi wan</h1>
-                        <p> Yoda est un personnage fictif de l'univers Star Wars. Il apparaît pour la première fois dans L'Empire contre-attaque en 1980. Il est le maître Jedi qui enseigne à Luke comment utiliser la Force.</p> 
-                    </div>
-                    <div class="presentoir">
-                        <img src="" alt="">
-                        <table>
-                            <tr>
-                                <th>Apparaît dans : </th>
-                                <td><em>La Menace fantôme</em></td>
-                                <td><em> La guerre des clones</em></td>
-                                <td><em>l'héritage</em> </td>
-                            </tr>
-                            <th>Première apparition :</th>
-                            <td><em>L'empire  contre attaque </em></td>
-                            <tr>
-                                <th>Affiliations :</th>
-                                <td>
-                                    ordre jedi
-                                </td>
-                    
-                            </tr>
-                            <tr>
-                                <th>Race :</th>
-                                <td>race de yoda</td>
-                            </tr>
-                            <tr>
-                                <th>Genre :</th>
-                                <td>Masculin</td>
-                            </tr>
-                            <tr>
-                                <th>Planète d'origine :</th>
-                                <td>Stewjon</td>
-                            </tr>
-                            <tr>
-                                <th>Métier :</th>
-                                <td>maitre jedi</td>
-                    
-                            </tr>
-                            <tr>
-                                <th>Côté de la force :</th>
-                                <td>Côté lumineux</td>
-                            </tr>
-                        </table>
-                    </div>
+						<h1>Obi wan</h1>
+						<p>
+							Yoda est un personnage fictif de l'univers Star Wars. Il apparaît pour la première fois dans L'Empire contre-attaque en 1980. Il est le maître Jedi qui enseigne à Luke comment utiliser
+							la Force.
+						</p>
+					</div>
+					<div class="presentoir">
+						<img src="" alt="" />
+						<table>
+							<tr>
+								<th>Apparaît dans :</th>
+								<td><em>La Menace fantôme</em></td>
+								<td><em> La guerre des clones</em></td>
+								<td><em>l'héritage</em></td>
+							</tr>
+							<th>Première apparition :</th>
+							<td><em>L'empire contre attaque </em></td>
+							<tr>
+								<th>Affiliations :</th>
+								<td>ordre jedi</td>
+							</tr>
+							<tr>
+								<th>Race :</th>
+								<td>race de yoda</td>
+							</tr>
+							<tr>
+								<th>Genre :</th>
+								<td>Masculin</td>
+							</tr>
+							<tr>
+								<th>Planète d'origine :</th>
+								<td>Stewjon</td>
+							</tr>
+							<tr>
+								<th>Métier :</th>
+								<td>maitre jedi</td>
+							</tr>
+							<tr>
+								<th>Côté de la force :</th>
+								<td>Côté lumineux</td>
+							</tr>
+						</table>
+					</div>
 				</div>
-                <div class="relations">
-                    <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
-					<p> On y apprend le rôle important de Yoda au Conseil Jedi. Quand des jeunes padawans commencent les premières étapes de la formation Jedi,
-                        ils le font avec les conseils avertis de Yoda. Beaucoup des plus grands Jedi de la République galactique se sont exercés avec Yoda dans leur jeunesse au sein de groupes de formation, les clans </p>.
-               
-                   <p>L'ombre du côté obscur est tombée sur la République et Yoda le sent de plus en plus. La montée en puissance du côté obscur crée une perturbation dans la Force assez forte pour occulter 
-                   les facultés de précognition du Jedi dans les sujets importants. Sentant l'incertitude préoccupante du futur, Yoda reconnaît le besoin de méditer.
-               
-                   Lors du décès de la mère d'Anakin et du massacre des Tuskens, Yoda ressent alors le grand bouleversement dans l'esprit du Jedi et comprend qu'Anakin se rapproche de plus en plus du côté obscur.
-                   
-                   Le Comte Dooku, un ancien padawan de Yoda mais désormais dirigeant de la CSI, construit une force militaire avec pour effectif principal les armées de droïdes des guildes de commerce. Quelque chose doit être fait.</p>
-                </div>
+				<div class="relations">
+					<h2>Rôle dans l'histoire</h2>
+					<img src="" alt="" />
+					<p>
+						On y apprend le rôle important de Yoda au Conseil Jedi. Quand des jeunes padawans commencent les premières étapes de la formation Jedi, ils le font avec les conseils avertis de Yoda.
+						Beaucoup des plus grands Jedi de la République galactique se sont exercés avec Yoda dans leur jeunesse au sein de groupes de formation, les clans
+					</p>
+					.
+
+					<p>
+						L'ombre du côté obscur est tombée sur la République et Yoda le sent de plus en plus. La montée en puissance du côté obscur crée une perturbation dans la Force assez forte pour occulter les
+						facultés de précognition du Jedi dans les sujets importants. Sentant l'incertitude préoccupante du futur, Yoda reconnaît le besoin de méditer. Lors du décès de la mère d'Anakin et du
+						massacre des Tuskens, Yoda ressent alors le grand bouleversement dans l'esprit du Jedi et comprend qu'Anakin se rapproche de plus en plus du côté obscur. Le Comte Dooku, un ancien padawan
+						de Yoda mais désormais dirigeant de la CSI, construit une force militaire avec pour effectif principal les armées de droïdes des guildes de commerce. Quelque chose doit être fait.
+					</p>
+				</div>
 			</div>
 		</main>
 		<footer>
