--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -25,12 +25,12 @@
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td><em>La Menace fantôme</em></td>
-								<td><em> La guerre des clones</em></td>
-								<td><em>l'héritage</em></td>
+								<td><a>La Menace fantôme</a>,<a> La guerre des clones</a> et <a>l'héritage</a></td>
 							</tr>
-							<th>Première apparition :</th>
-							<td><em>L'empire contre attaque </em></td>
+							<tr>
+								<th>Première apparition :</th>
+								<td><a>L'empire contre attaque </a></td>
+							</tr>
 							<tr>
 								<th>Affiliations :</th>
 								<td>ordre jedi</td>
