--- a/views/characters/personnage.html
+++ b/views/characters/personnage.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles.css" />
+		<link rel="stylesheet" href="../../css/styles.css">
 		<title></title>
 	</head>
 	<body>
@@ -15,12 +15,12 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-						<h1></h1>
-						<p></p>
-					</div>
-					<div class="presentoir">
-						<img src="" alt="" />
-						<table>
+                        <h1></h1>
+                        <p></p>
+                    </div>
+                    <div class="presentoir">
+                        <img src="" alt="">
+                        <table>
 							<tr>
 								<th>Apparaît dans :</th>
 								<td></td>
@@ -54,16 +54,16 @@
 								<td></td>
 							</tr>
 						</table>
-					</div>
+                    </div>
 				</div>
-				<div class="relations">
-					<hr />
-					<h2>Rôle dans l'histoire</h2>
-					<img src="" alt="" />
-					<p></p>
-					<p></p>
-					<p></p>
-				</div>
+                <div class="relations">
+					<hr>
+                    <h2>Rôle dans l'histoire</h2>
+                    <img src="" alt="">
+					<p></p>  
+					<p></p>   
+					<p></p> 
+                </div>
 			</div>
 		</main>
 		<footer>
