--- a/views/characters/gregar_typho.html
+++ b/views/characters/gregar_typho.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles.css">
-		<title></title>
+		<link rel="stylesheet" href="../../css/styles.css" />
+		<title>Gregar Typho</title>
 	</head>
 	<body>
 		<header>
@@ -15,15 +15,19 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-                        <h1></h1>
-                        <p></p>
-                    </div>
-                    <div class="presentoir">
-                        <img src="" alt="">
-                        <table>
+						<h1>Gregar Typho</h1>
+						<p></p>
+					</div>
+					<div class="presentoir">
+						<img src="" alt="" />
+						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td></td>
+								<td>
+									<a href="">Star Wars épisode II : L'Attaque des Clones (première apparition) </a>
+									<a href="">TCW mini logo.jpg Star Wars: The Clone Wars</a>
+									<a href="">Star Wars épisode III : La Revanche des Sith</a>
+								</td>
 							</tr>
 							<tr>
 								<th>Première apparition :</th>
@@ -31,15 +35,18 @@
 							</tr>
 							<tr>
 								<th>Affiliations :</th>
-								<td></td>
+								<td>
+									<a>Maison Royale de Naboo</a>, <a>Forces Royales de Sécurité de Naboo</a> et
+									<a>République Galactique</a>
+								</td>
 							</tr>
 							<tr>
 								<th>Race :</th>
-								<td></td>
+								<td>Humain</td>
 							</tr>
 							<tr>
 								<th>Genre :</th>
-								<td></td>
+								<td>Masculin</td>
 							</tr>
 							<tr>
 								<th>Planète d'origine :</th>
@@ -54,16 +61,16 @@
 								<td></td>
 							</tr>
 						</table>
-                    </div>
+					</div>
 				</div>
-                <div class="relations">
-					<hr>
-                    <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
-					<p></p>  
-					<p></p>   
-					<p></p> 
-                </div>
+				<div class="relations">
+					<hr />
+					<h2>Rôle dans l'histoire</h2>
+					<img src="" alt="" />
+					<p></p>
+					<p></p>
+					<p></p>
+				</div>
 			</div>
 		</main>
 		<footer>
