--- a/views/characters/gregar_typho.html
+++ b/views/characters/gregar_typho.html
@@ -24,14 +24,13 @@
 							<tr>
 								<th>Apparaît dans :</th>
 								<td>
-									<a href="">Star Wars épisode II : L'Attaque des Clones (première apparition) </a>
-									<a href="">TCW mini logo.jpg Star Wars: The Clone Wars</a>
+									<a href="">Star Wars épisode II : L'Attaque des Clones</a>, <a href="">TCW mini logo.jpg Star Wars: The Clone Wars</a> et
 									<a href="">Star Wars épisode III : La Revanche des Sith</a>
 								</td>
 							</tr>
 							<tr>
 								<th>Première apparition :</th>
-								<td></td>
+								<td><a href="">Star Wars épisode II : L'Attaque des Clones</a></td>
 							</tr>
 							<tr>
 								<th>Affiliations :</th>
@@ -50,15 +49,15 @@
 							</tr>
 							<tr>
 								<th>Planète d'origine :</th>
-								<td></td>
+								<td>Naboo</td>
 							</tr>
 							<tr>
 								<th>Métier :</th>
-								<td></td>
+								<td>Garde du corps</td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td></td>
+								<td>Lumineux</td>
 							</tr>
 						</table>
 					</div>
