--- a/views/characters/gregar_typho.html
+++ b/views/characters/gregar_typho.html
@@ -66,9 +66,7 @@
 					<hr />
 					<h2>Rôle dans l'histoire</h2>
 					<img src="" alt="" />
-					<p></p>
-					<p></p>
-					<p></p>
+					<p>Gregar Typho est le neveu du capitaine Panaka et le garde du corps de la sénatrice Padmé Amidala, dont il était fou amoureux, mais il n'a jamais eu l'occasion de le lui avouer. Parvenu à son poste grâce à son indéfectible loyauté envers son oncle, Typho est un novice dans cet environnement dangereux, dont les représentants galactiques du Sénat Galactique sont, eux, familiers. Typho a perdu un œil dans l'exercice de ses fonctions.</p>
 				</div>
 			</div>
 		</main>
