--- a/views/characters/gregar_typho.html
+++ b/views/characters/gregar_typho.html
@@ -16,7 +16,11 @@
 				<div class="presentation">
 					<div class="histoire">
 						<h1>Gregar Typho</h1>
-						<p></p>
+						<p>
+							Gregar Typho est le neveu du capitaine Panaka et le garde du corps de la sénatrice Padmé Amidala, dont il était fou amoureux, mais il n'a jamais eu l'occasion de le lui avouer. Parvenu à
+							son poste grâce à son indéfectible loyauté envers son oncle, Typho est un novice dans cet environnement dangereux, dont les représentants galactiques du Sénat Galactique sont, eux,
+							familiers. Typho a perdu un œil dans l'exercice de ses fonctions.
+						</p>
 					</div>
 					<div class="presentoir">
 						<img src="" alt="" />
@@ -35,8 +39,7 @@
 							<tr>
 								<th>Affiliations :</th>
 								<td>
-									<a>Maison Royale de Naboo</a>, <a>Forces Royales de Sécurité de Naboo</a> et
-									<a>République Galactique</a>
+									<a>Maison Royale de Naboo</a>, <a>Forces Royales de Sécurité de Naboo</a> et <a>République Galactique</a>
 								</td>
 							</tr>
 							<tr>
@@ -66,7 +69,21 @@
 					<hr />
 					<h2>Rôle dans l'histoire</h2>
 					<img src="" alt="" />
-					<p>Gregar Typho est le neveu du capitaine Panaka et le garde du corps de la sénatrice Padmé Amidala, dont il était fou amoureux, mais il n'a jamais eu l'occasion de le lui avouer. Parvenu à son poste grâce à son indéfectible loyauté envers son oncle, Typho est un novice dans cet environnement dangereux, dont les représentants galactiques du Sénat Galactique sont, eux, familiers. Typho a perdu un œil dans l'exercice de ses fonctions.</p>
+					<p>
+						Gregar Typho était le neveu du capitaine Quarsh Panaka et de sa femme Mariek Panaka . Son oncle a servi dans les forces de sécurité royales de Naboo . Typho avait au moins un autre parent,
+						un cousin nommé Versaat .
+					</p>
+					<p>
+						À un moment donné, Gregar Typho a suivi une formation des forces de sécurité aux côtés de Dorra , qui est restée à l'Académie pour suivre une version modifiée de la formation de servante .
+						[4]
+					</p>
+					<p>
+						Lors de l' invasion de Naboo , Gregar a été arrêté par la Fédération du commerce et détenu au camp trois aux côtés de citoyens de Naboo qui avaient été incarcérés dans les dortoirs du
+						campus de l'université de Gallo Mountain . Typho a fait tout son possible pour protéger sa famille tout en veillant à ce que de la nourriture soit fournie aux enfants du camp. Après avoir
+						trouvé un émetteur en état de marche, Typho a assigné des quarts de travail pour maintenir les communications avec l'extérieur. Alors qu'il prenait son tour pendant l'un de ces quarts de
+						travail, il apprit que la reine de Naboo était arrivée, ouvrant la porte à une résistance efficace à la Fédération du commerce. Gregar a alors commencé les préparatifs pour le combat à
+						venir. Dans la bataille qui a suivi pour reprendre la planète, il a perdu son œil gauche.
+					</p>
 				</div>
 			</div>
 		</main>
