update Zam Wesell

--- a/views/characters/Compte_Dooku.html
+++ b/views/characters/Compte_Dooku.html
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-                        <h1></h1>
+                        <h1>Le Compte Dooku</h1>
                         <p>Le comte Dooku, alias Dark Tyranus, ou Darth Tyranus dans la version originale et québécoise, est un personnage de fiction de Star Wars et l'un des principaux antagonistes de la prélogie. Il apparait dans les films L'Attaque des Clones (2002) et La Revanche des Sith (2005). Dooku est un Seigneur Sith et le commandant suprême de la Confédération des systèmes indépendants.</p>
                     </div>
                     <div class="presentoir">
