--- a/views/forms/connexion.html
+++ b/views/forms/connexion.html
@@ -9,14 +9,18 @@
 </head>
 
 <body>
+    <header>
+        <iframe src="../../views/header.html" frameborder="0"></iframe>
+    </header>
+    
     <h1>Connexion</h1>
 
     <div class="container">
         <div class="connect ">
-            <h1>Logo</h1>
+            <h1>Connexion</h1>
             <form id="logging">
-                <label>Email <input type="text" name="enom" id="euser"></label>
-                <label>Password<input type="text" name="pass" id="password"></label>
+                <label for="enom">Email <input type="email" name="enom" id="euser"></label>
+                <label label="pass">Password<input type="password" name="pass" id="password"></label>
                 <input type="submit" class="submit" value="Envoyer">
                 <a href="#">Mot de passe oublié ?</a>
             </form>
@@ -24,6 +28,9 @@
 
         </div>
     </div>
+    <footer>
+        <iframe src="../../views/footer.html" frameborder="0"></iframe>
+    </footer>
 
 </body>
 
