--- a/views/forms/inscription.html
+++ b/views/forms/inscription.html
@@ -8,6 +8,9 @@
     <link rel='stylesheet' type='text/css' media='screen' href='.css'>
 </head>
 <body>
+    <header>
+        <iframe src="../../views/header.html" frameborder="0"></iframe>
+    </header>
     <h1>Formulaire d'Inscription</h1>
     <div class="container">
         <div class="inscrire">
@@ -28,5 +31,8 @@
             </form>
         </div>
     </div>
+    <footer>
+        <iframe src="../../views/footer.html" frameborder="0"></iframe>
+    </footer>
 </body>
 </html>
