--- a/views/forms/inscription.html
+++ b/views/forms/inscription.html
@@ -28,6 +28,7 @@
                     <label>Mot de Passe:<input type="password" name="pass" id="password"></label>
                     <label>Confirmer Mot de Passe:<input type="password" name="pass" id="password"></label>
                 </div>
+                <button type="submit" name="inscrire">Envoyer ces informations</button>
             </form>
         </div>
     </div>
