--- a/views/characters/index_perso.html
+++ b/views/characters/index_perso.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index personnages </title>
 </head>
+
 <body>
 
     <div class="container">
-    div3 1
+        <h1>les personnages de la trlogie</h1>
+
+        <h2>les principaux protagonistes de la trilogie </h2>
+        <div>
+
+            <div class="itemanakin"><a href="#"><img src="anakin" alt="" ></a></div>
+            <div class="itempalpatine"><a href="#"><img src="anakin" alt="" ></a></div>
+            <div class="itemamidala"><a href="#"><img src="anakin" alt="" ></a></div>
+            <div class="itemanakin"><a href="#"><img src="anakin" alt="" ></a></div>
+            <div class="itemanakin"><a href="#"><img src="anakin" alt="" width="50px"></a></div>
 
 
 
@@ -18,10 +29,7 @@
 
 
 
-
-
-
-
+        </div>
 
 
 
@@ -30,6 +38,7 @@
 
 
     </div>
-    
+
 </body>
+
 </html>
