--- a/views/forms/contact.html
+++ b/views/forms/contact.html
@@ -18,6 +18,7 @@
         <div class="contact ">
             <h1>Contact</h1>
             <form id="contacts">
+               
                 <label for="cnom">Nom
                     <input type="text" name="cnom" id="enoms">
                 </label>
@@ -30,12 +31,10 @@
                     <input type="email" name="mailcontact" id="euser">
                 </label>
 
-                <label for="remarque">Remarques:</label>
+                <label for="remarque">Remarques:
                 <textarea name="remarque" id="remarques" rows="4" cols="30">
                 </textarea>
-
-
-
+</label>
                 <label for="envoyer"><input type="submit" class="submit" name="remarque" value="envoyer">
                 </label>
 
