--- a/views/characters/anakin_skywalker.html
+++ b/views/characters/anakin_skywalker.html
@@ -16,21 +16,21 @@
 				<div class="presentation">
 					<div class="histoire">
                         <h1>Anakin Skywalker</h1>
-                        <p>La prélogie, composée de <a>La Menace fantôme</a> (1999), <a>L'Attaque des clones</a> (2002) et <a>La Revanche des Sith</a> (2005), explore l'enfance et la jeunesse d'Anakin Skywalker, détaillant les raisons et les circonstances de sa transformation en personnage malfaisant.</p> 
-                        <p>Son éducation en tant que Jedi auprès d'Obi-Wan Kenobi, son basculaent du côté obscur de la Force pour devenir l'apprenti et le bras armé de l'apereur Palpatine, sa rédaption finale lui permettant d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux praières trilogies.</p> 
+                        <p>La prélogie, composée de <a href="../movies/movie1.html">La Menace fantôme</a> (1999), <a href="../movies/movie2.html">L'Attaque des clones</a> (2002) et <a href="../movies/movie3.html">La Revanche des Sith</a> (2005), explore l'enfance et la jeunesse d'Anakin Skywalker, détaillant les raisons et les circonstances de sa transformation en personnage malfaisant.</p> 
+                        <p>Son éducation en tant que Jedi auprès d'<a href="obi-wan_kenobi.html">Obi-Wan Kenobi</a>, son basculement du côté obscur de la Force pour devenir l'apprenti et le bras armé de l'<a href="palpatine.html">empereur Palpatine</a>, sa rédaption finale lui permettant d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux premières trilogies.</p> 
                     </div>
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
                             <tr>
                                 <th>Apparaît dans : </th> 
-                                <td><a>La Menace fantôme</a> , <a>L'Attaque des clones</a> et <a>La Vengeance des Sith</a></td>
+                                <td><a href="../movies/movie1.html">La Menace fantôme</a> , <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Vengeance des Sith</a></td>
                             </tr>
                                 <th>Première apparition :</th>
                                 <td><a>Un Nouvel espoir</a></td>
                             <tr>
                                 <th>Affiliations :</th>
-                                <td>Ordre Jedi affilié/République galactique, puis Sith/apire galactique</td>
+                                <td><a href="">Ordre Jedi</a>/République galactique, puis Sith/apire galactique</td>
                             </tr>
                             <tr>
                                 <th>Race :</th>
