--- a/views/movies/movie3.html
+++ b/views/movies/movie3.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Star Wars, épisode III : La Revanche des Sith (Star Wars: Episode III – Revenge of the Sith) est un film américain de science-fiction de type space opera sorti en 2005 écrit et réalisé par George Lucas.</p>
-    <p>C'est le sixième opus de la saga Star Wars par sa date de sortie, mais le troisième selon l'ordre chronologique de l'histoire. Sorti trois ans après L'Attaque des clones, il est le dernier volet de la trilogie de préquelle, la « prélogie ». Le film est également la sixième et dernière réalisation de Lucas.</p>
-    <p>L'histoire de cet épisode se déroule trois ans après les événements de L'Attaque des clones alors que la galaxie est enlisée dans un conflit à grande échelle, la guerre des clones. Voyant leur chance de l’emporter s’amenuiser, les forces séparatistes frappent un grand coup, attaquant la planète capitale Coruscant et s’emparent de Palpatine, le Chancelier suprême de la République. Les deux Jedi Obi-Wan Kenobi et Anakin Skywalker se donnent alors pour mission de délivrer le dirigeant républicain, ignorant qu'il s'avère être le seigneur noir Sith Dark Sidious qui manipule les séparatistes. Sous l'influence de ce dernier, Anakin Skywalker bascule progressivement du côté obscur de la Force et devient Dark Vador. Le final du film fait le lien avec l'épisode IV, sorti au cinéma vingt-huit ans plus tôt.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/styles.css" />
+    <title>La Revanche des Sith</title>
+  </head>
+  <body>
+    <header>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
+    </header>
+    <main>
+      <div class="container">
+        <div class="movie">
+          <div class="poster">
+            <h1>La Revanche des Sith</h1>
+            <img src="../../images/movies/poster3.jpg" alt="" />
+          </div>
+          <div class="synopsis">
+            <h2>Synopsis :</h2>
+            <p>Star Wars, épisode III : La Revanche des Sith (Star Wars: Episode III – Revenge of the Sith) est un film américain de science-fiction de type space opera sorti en 2005 écrit et réalisé par George Lucas.</p>
+            <p>C'est le sixième opus de la saga Star Wars par sa date de sortie, mais le troisième selon l'ordre chronologique de l'histoire. Sorti trois ans après L'Attaque des clones, il est le dernier volet de la trilogie de préquelle, la « prélogie ». Le film est également la sixième et dernière réalisation de Lucas.</p>
+            <p>L'histoire de cet épisode se déroule trois ans après les événements de L'Attaque des clones alors que la galaxie est enlisée dans un conflit à grande échelle, la guerre des clones. Voyant leur chance de l’emporter s’amenuiser, les forces séparatistes frappent un grand coup, attaquant la planète capitale Coruscant et s’emparent de Palpatine, le Chancelier suprême de la République. Les deux Jedi Obi-Wan Kenobi et Anakin Skywalker se donnent alors pour mission de délivrer le dirigeant républicain, ignorant qu'il s'avère être le seigneur noir Sith Dark Sidious qui manipule les séparatistes. Sous l'influence de ce dernier, Anakin Skywalker bascule progressivement du côté obscur de la Force et devient Dark Vador. Le final du film fait le lien avec l'épisode IV, sorti au cinéma vingt-huit ans plus tôt.</p>
+          </div>
+        </div>
+
+        <div class="trailer">
+            <iframe width="900" height="506" src="https://www.youtube.com/embed/t1qtvKYwTV0" title="Star Wars : La Revanche des Sith – Episode III - Bande Annonce VF – 2005" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
+    </footer>
+  </body>
 </html>
