--- a/views/corporations/siths.html
+++ b/views/corporations/siths.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title>Jedi</title>
+		<title>Siths</title>
 	</head>
 	<body>
 		<header>
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-						<h1>Jedi</h1>
+						<h1>Siths</h1>
 						<p>Les Jedi ont fini par former une entité politique centrale appelée conseil Jedi.
 							Celui-ci constitue l'instance suprême qui dirige l'Ordre, et est lié à l'organisation politique de la République à travers l'action des Jedi dans des missions consulaires ou militaires.
 							Le conseil Jedi ne peut avoir que douze membres à la fois.
