--- a/views/planets/geonosis.html
+++ b/views/planets/geonosis.html
@@ -20,11 +20,11 @@
                        </p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/planets/geonosis.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :  </th>
-								<td> <a href="">L'Attaque des clones</a></td>
+								<td> <a href="../movies/movie2.html">L'Attaque des clones</a></td>
 							</tr>
 							<tr>
 								<th>Environnement : </th>
