--- a/views/planets/kamino.html
+++ b/views/planets/kamino.html
@@ -34,11 +34,11 @@
                         que dans plusieurs romans, jeux vidéo et bandes dessinées...</p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="" />
+                    <img src="../../images/planets/kamino.jpg" alt="" />
                     <table>
                         <tr>
                             <th>Apparaît dans :</th>
-                            <td>La Revanche des Siths</td>
+                            <td><a href="../movies/movie3.html">La Revanche des Siths</a></td>
                         </tr>
                         <tr>
                             <th>Environnement :</th>
