--- a/views/planets/kashyyk.html
+++ b/views/planets/kashyyk.html
@@ -27,11 +27,11 @@
                         exploitée pendant plusieurs décennies par les différents régimes.</p>
                 </div>
                 <div class="presentoir">
-                    <img src="" alt="" />
+                    <img src="../../images/planets/kashyyyk.jpg" alt="" />
                     <table>
                         <tr>
                             <th>Apparaît dans :</th>
-                            <td>La Revanche des Siths</td>
+                            <td><a href="../movies/movie3.html">La Revanche des Siths</a></td>
                         </tr>
                         <tr>
                             <th>Environnement :</th>
