--- a/views/planets/utapau.html
+++ b/views/planets/utapau.html
@@ -23,11 +23,11 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/planets/utapau.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td><a>La Revanche des Sith</a></td>
+								<td><a href="../movies/movie3.html">La Revanche des Sith</a></td>
 							</tr>
 							<tr>
 								<th>Environnement :</th>
