--- a/views/planets/coruscant.html
+++ b/views/planets/coruscant.html
@@ -19,11 +19,11 @@
 						<p>Le système Coruscant se situe dans les mondes du Noyau. Il se trouve dans le sous-secteur homonyme, lui-même inclus dans le secteur homonyme. Ses coordonnées dans la norme galactique sont 0-0-0. Elles sont prises comme centre du repère. Coruscant orbite à assez grande distance de sa minuscule étoile, aussi appelée Coruscant. Il s'agit de la cinquième des dix planètes de ce système, sans compter un champ d'astéroïdes et une agrégation de comètes. Coruscant offre un climat peu hospitalier pour les humains. Ceux-ci ont par conséquent satellisé une batterie de miroirs afin d'amplifier la chaleur et la lumière de son soleil.</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/planets/coruscant.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans : </th>
-								<td> <a>La Menace fantôme  / </a>, <a href="">L'Attaque des clones</a> et <a>La Revanche des Siths</a></td>
+								<td> <a href="../movies/movie1.html">La Menace fantôme  </a>, <a href="../movies/movie2.html">L'Attaque des clones</a> et <a href="../movies/movie3.html">La Revanche des Siths</a></td>
 							</tr>
 							<tr>
 								<th>Environnement : </th>
