--- a/views/planets/mustafar.html
+++ b/views/planets/mustafar.html
@@ -20,11 +20,11 @@
 						Malgré son hostilité naturelle, elle est habitée par les Mustafariens et très prisée pour ses ressources minières par la Confédération des systèmes indépendants durant la guerre des clones, puis par l'Empire galactique. L'influence du côté obscur de la Force étant forte sur cette planète, Dark Vador y fait construire son château durant la période de domination de l'Empire.</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/planets/mustafar.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>La Revanche des Siths</td>
+								<td><a href="../movies/movie3.html">La Revanche des Siths</a></td>
 							</tr>
 							<tr>
 								<th>Environnement :</th>
