--- a/views/planets/naboo.html
+++ b/views/planets/naboo.html
@@ -24,11 +24,11 @@
 						  </p>
                     </div>
                     <div class="presentoir">
-                        <img src="" alt="">
+                        <img src="../../images/planets/naboo.jpg" alt="">
                         <table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td>La Menace Fantôme, L'Attaque des Clones, La Revanche des Siths</td>
+								<td><a href="../movies/movie1.html">La Menace Fantôme</a>,<a href="../movies/movie2.html">L'Attaque des Clones</a>,<a href="../movies/movie3.html">La Revanche des Siths</a></td>
 							</tr>
 							<tr>
 								<th>Environnement :</th>
