--- a/views/planets/tatooine.html
+++ b/views/planets/tatooine.html
@@ -22,12 +22,12 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="" alt="" />
+						<img src="../../images/planets/tatooine.jpg" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
 								<td>	
-									<a>La Menace fantôme</a>, <a>L'Attaque des clones</a>, <a>The Clone Wars</a>, <a>La Revanche des Sith</a>, <a>Un nouvel espoir</a>, <a>Le Retour du Jedi</a>, <a>L'Ascension de Skywalker</a>
+									<a href="../movies/movie1.html">La Menace fantôme</a>, <a href="../movies/movie2.html">L'Attaque des clones</a>, <a href="../movies/movie3.html">La Revanche des Sith</a>
 								</td>
 							</tr>
 							<tr>
