--- a/views/corporations/republique_galactique.html
+++ b/views/corporations/republique_galactique.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<title></title>
+		<title>République galactique</title>
 	</head>
 	<body>
 		<header>
@@ -15,19 +15,23 @@
 			<div class="container">
 				<div class="presentation">
 					<div class="histoire">
-						<h1></h1>
-						<p></p>
+						<h1>République galactique</h1>
+						<p>
+							La République galactique (Galactic Republic en version originale), ou simplement désignée comme la République est un régime politique fictif apparaissant dans le monde fantastique de
+							Star Wars prédominant la galaxie durant un millénaire environ, s'achevant 19 ans avant la bataille de Yavin (considérée comme le principal point de repère temporel de l'univers), date à
+							laquelle son Chancelier Suprême proclame l'Empire galactique. Après la disparition de ce dernier, un nouveau régime républicain voit le jour, la Nouvelle République.
+						</p>
 					</div>
 					<div class="presentoir">
 						<img src="" alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
-								<td></td>
+								<td>La Menace fantôme, L'Attaque des clones, The Clone Wars, La Revanche des Sith</td>
 							</tr>
 							<tr>
 								<th>Côté de la force :</th>
-								<td></td>
+								<td>Lumineux</td>
 							</tr>
 						</table>
 					</div>
